force-app/main/default/objects/RS_VoiceCall_OwnerId__mdt/RS_VoiceCall_OwnerId__mdt.object-meta.xml
<CustomObject>
    <label>VoiceCall OwnerId</label>
    <pluralLabel>VoiceCall OwnerId</pluralLabel>
</CustomObject>