force-app/main/default/objects/RS_VoiceCall_OwnerId__mdt/fields/DynamoDB_Name__c.field-meta.xml
<CustomField>
    <fullName>DynamoDB_Name__c</fullName>
    <description>This field is used for api call between sf and aws. Field specifies the dynamo database name at aws instance.</description>
    <label>DynamoDB Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>