force-app/main/default/objects/RS_VoiceCall_OwnerId__mdt/fields/Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Instance_Id__c</fullName>
    <label>Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>