force-app/main/default/objects/RS_VoiceCall_OwnerId__mdt/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>